--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "async-fsm",
+  "name": "async-fsm.js",
   "version": "0.1.1",
   "description": "",
   "main": "./dist/async-fsm.min.js",
