--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wiz-code/async-fsm",
-  "version": "0.3.5",
+  "version": "0.4.0",
   "description": "Finite StateMachine JavaScript Library",
   "keywords": [
     "FSM",
@@ -8,13 +8,13 @@
     "JavaScript",
     "asynchronous"
   ],
-  "main": "./src/async-fsm.js",
+  "main": "./src/index.js",
   "scripts": {},
   "author": "Masa",
   "license": "MIT",
   "repository": "https://github.com/wiz-code/async-fsm.git",
   "dependencies": {
-    "bluebird": "^3.5.0",
+    "es6-promise": "^4.2.4",
     "underscore": "^1.8.3",
     "uuid": "^3.0.1"
   },
